# backend/src/routes/candidateRoutes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { addCandidate, getCandidateById } from '../presentation/controllers/candidateController';
+import { addCandidate, getCandidateById, updateCandidateStage } from '../presentation/controllers/candidateController';
 
 const router = Router();
 
@@ -18,5 +18,8 @@ router.post('/', async (req, res) => {
 });
 
 router.get('/:id', getCandidateById);
+
+// PUT /candidates/:id/stage
+router.put('/:id/stage', updateCandidateStage);
 
 export default router;
